// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Modal renders Modal component with default title 1`] = `
Array [
  <Overlay
    onClick={[Function]}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  .c0 {
  background: white;
  height: auto;
  left: 50%;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 60%;
  z-index: 9000;
}

.c1 {
  padding: 2rem;
}

@media (max-width:26.25em) {
  .c0 {
    width: calc(100% - 2rem - 2rem);
  }
}

<div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <section
      aria-labelledby="dialog-label"
      aria-modal="true"
      className="c0"
      role="dialog"
    >
      <Header
        as="h3"
        data-testid="modal-header"
        id="dialog-label"
      >
        Modal
        <CloseButton
          aria-label="close"
          onClick={[Function]}
        >
          <span>
            <Cross />
          </span>
        </CloseButton>
      </Header>
      <section
        className="c1"
        data-testid="modal-body"
      >
        Test
      </section>
    </section>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`COMPONENT - Modal renders Modal component with defined title 1`] = `
Array [
  <Overlay
    onClick={[Function]}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  .c0 {
  background: white;
  height: auto;
  left: 50%;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 60%;
  z-index: 9000;
}

.c1 {
  padding: 2rem;
}

@media (max-width:26.25em) {
  .c0 {
    width: calc(100% - 2rem - 2rem);
  }
}

<div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <section
      aria-labelledby="dialog-label"
      aria-modal="true"
      className="c0"
      role="dialog"
    >
      <Header
        as="h3"
        data-testid="modal-header"
        id="dialog-label"
      >
        Defined Modal Title
        <CloseButton
          aria-label="close"
          onClick={[Function]}
        >
          <span>
            <Cross />
          </span>
        </CloseButton>
      </Header>
      <section
        className="c1"
        data-testid="modal-body"
      >
        Test
      </section>
    </section>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;
